image size of speakers fix - done
navigation day changes - done
pages - 
        about us,gallery
speakers page edit
schedule
no sponsers page
no news page
new page -
        except saurab sir
        core comittee and advisory committee in table format only
at every register now button open