@@ -443,7 +443,7 @@
           <div class="col-12">
             <!-- Section Title -->
             <div class="section-title">
-              <h3>Core <span class="alternate">Committee</span></h3>
+              <h3>Advisory <span class="alternate">Committee</span></h3>
             </div>
           </div>
         </div>
