@@ -139,8 +139,9 @@
 				<!-- Content Block -->
 				<div class="block">
 					<h4 style="font-size: 2.5rem">National Conference on</h4>
-					<h4>GEOPHYSICAL ADVANCES -NATURAL RESOURCE EXPLORATION, ENERGY SECURITY AND GEOHAZARDS</h4>
-					<h6>December 23 - 25, Indian Institute of Technology (Indian of Mines),Dhanbad</h6>
+					<h4>GEOPHYSICAL ADVANCES - NATURAL RESOURCE EXPLORATION, ENERGY SECURITY AND GEOHAZARDS</h4>
+					<h6>24 - 26 March, 2023</h6>
+					<h6>Indian Institute of Technology (Indian of Mines), Dhanbad - 826004</h6>
 					<!-- Action Button -->
 					<a href="registerPage.html" class="btn btn-main-md">Register Now</a>
 				</div>
@@ -290,19 +291,19 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#nov20" data-toggle="pill">
 								Day-01
-								<span>23 December</span>
+								<span>24 March</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#nov21" data-toggle="pill">
 								Day-02
-								<span>24 December</span>
+								<span>25 March</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#nov22" data-toggle="pill">
 								Day-03
-								<span>25 December</span>
+								<span>26 March</span>
 							</a>
 						</li>
 					</ul>
@@ -586,7 +587,7 @@ Resource Exploration</div>
 		<div class="row">
 			<div class="col-12">
 				<div class="section-title">
-					<h3>Eventre <span class="alternate">Gallery</span></h3>
+					<h3><span class="alternate">Gallery</span></h3>
 					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, autem.</p> -->
 				</div>
 			</div>
@@ -692,7 +693,7 @@ Resource Exploration</div>
     <div class="row">
       <div class="col-md-6 align-self-center">
         <div class="copyright-text">
-          <p><a href="index.html">IIT (ISM) Dhanbad</a> &copy; 2022</p>
+          <p><a href="index.html">IIT (ISM) Dhanbad</a> &copy; 2023</p>
         </div>
       </div>
       <div class="col-md-6">
