@@ -140,19 +140,19 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#nov20" data-toggle="pill">
 								Day-01
-								<span>23 December</span>
+								<span>24 March</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#nov21" data-toggle="pill">
 								Day-02
-								<span>24 December</span>
+								<span>25 March</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#nov22" data-toggle="pill">
 								Day-03
-								<span>25 December</span>
+								<span>26 March</span>
 							</a>
 						</li>
 					</ul>
